# Taurus

./: .gitignore  index.html  plan.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
