[package]
name = "searxng-browser"
version = "0.1.0"
description = "A simple Tauri-based web browser using SearXNG"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "^2.0.0", features = [] }
tauri-plugin-shell = { version = "^2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }
